--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-  <title>result</title>
+  <title>2or3predict</title>
         <style>body {padding: 10px;}</style>
         <!-- Bootstrap -->
         <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
