--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <title>result</title>
         <style>body {padding: 10px;}</style>
         <!-- Bootstrap -->
