--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google-site-verification" content="lolCc9HxwPZ4_-icVDQ8J7jxu5l1MTiL8jsdrfBwBKA" />
   <title>2or3predict</title>
         <style>body {padding: 10px;}</style>
         <!-- Bootstrap -->
